add too tip for full screen button, handle key events on full screen (f11, esc) handle mouse cursor on full screen

--- a/VideoPlayer/GlassButton.xaml
+++ b/VideoPlayer/GlassButton.xaml
@@ -171,4 +171,20 @@
     </Style>
 
 
+    <Style x:Key="full_screen" TargetType="{x:Type Button}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFEB2B17"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
